Testes controller sim sinon
